--- a/skills.css
+++ b/skills.css
@@ -104,7 +104,7 @@ input[type="checkbox"] {
     content:none !important;
 }
 
-.upme-icon-arrow-down:before {
+.upme-icon-arrow-down::before {
     content:none !important;
 }
 
@@ -112,7 +112,7 @@ input[type="checkbox"] {
     content:none !important;
 }
 
-.upme-icon-arrow-up:before {
+.upme-icon-arrow-up::before {
     content:none !important;
 }
 
@@ -155,9 +155,14 @@ label.upme-checkbox {
   display: inline-block;
 }
 
-.upme-field-value a[href], .vcard td[class*="email"] a[href], .vcard td[class*="phone"] a[href] {
+.upme-field-value a[href], .vcard .email-wrapper a[href], .vcard .phone-wrapper a[href], a.skill-toggle {
   font-weight: normal;
   border-bottom: 1px dotted;
+}
+
+.svg-inline--fa.fa-search, .svg-inline--fa.fa-star {
+  width: 0.75em;
+  margin-right: 0.5rem;
 }
 
 .userlistfooter > div {
@@ -180,8 +185,42 @@ label.upme-checkbox {
   overflow-x: scroll;
 }
 
+#usertable th {
+  white-space: nowrap;
+}
+
+#usertable .td2 {
+  padding-left: 11rem;
+}
+
 #usertable .th2, #usertable .td2 {
-  border-left: none; /* Don't visually separate the avatar image and user details. */
+  width: 20%;
+}
+
+#usertable .th7, #usertable .td7 {
+  width: 40%;
+}
+
+#usertable .th8, #usertable .td8 {
+  width: 40%;
+}
+
+#usertable .th7 a, #usertable .th8 a {
+  color: inherit;
+
+  font-weight: normal;
+}
+
+#usertable .avatar {
+  max-width: 9rem;
+  margin-left: calc(-11rem + 7px);
+  padding: 0.5rem;
+  float: left;
+
+  background: #fff;
+  border: 1px solid #ddd;
+
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
 
 /* --------------------------------------------------------------------- */
@@ -409,6 +448,7 @@ input[name="csvsubset"] {
   color: #666;
   text-transform: none;
   cursor: pointer;
+  position: relative;
 }
 
 .upme-skills-values .skill-tag {
@@ -430,6 +470,24 @@ input[name="csvsubset"] {
   border: 1px solid transparent;
 }
 
+/* Set styles for priority skills. */
+.skill-tag.skill-tag-priority, .skill-tag.skill-tag-search {
+  border: 1px solid rgba(0, 0, 0, 0.13);
+  box-shadow: 0 0 10px #FFF;
+}
+
+.skill-tag.skill-tag-priority::before, .skill-tag.skill-tag-search::before {
+  content: " ";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  position: absolute;
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  border-radius: 0.35rem;
+}
+
+/* Set skill tag color. */
 .skill-tag.skill-administration, .skill-administration .skill-tag-tooltip-tag {
   background-color: rgba(213, 94, 0, 0.2);
 }
@@ -459,6 +517,23 @@ input[name="csvsubset"] {
   background-color: #FFF;
 }
 
+/* Directory skill toggle. */
+a.skill-toggle {
+  margin: 0.2rem 0.1rem 0 0;
+  padding: 0.375rem 0 0;
+  display: inline-block;
+  border-top: 1px solid transparent;
+  border-left: 1px solid transparent;
+  border-right: 1px solid transparent;
+
+  font-size: 1.4rem;
+  line-height: 1.5em;
+  white-space: nowrap;
+
+  cursor: pointer;
+}
+
+/* Profile edit page. */
 .upme-skills-values {
   display: grid;
   display: -ms-grid;
@@ -578,7 +653,7 @@ input[name="csvsubset"] {
   border-color: #FFF;
 }
 
-.tooltip .tooltip-arrow:before {
+.tooltip .tooltip-arrow::before {
   content: " ";
   position: absolute;
   z-index: -1;
@@ -606,12 +681,12 @@ input[name="csvsubset"] {
   margin-bottom: 0;
 }
 
-.tooltip[x-placement^="top"] .tooltip-arrow:before {
+.tooltip[x-placement^="top"] .tooltip-arrow::before {
   top: -20px;
   left: -21px;
 }
 
-.tooltip[x-placement^="top"] .tooltip-arrow, .tooltip[x-placement^="top"] .tooltip-arrow:before {
+.tooltip[x-placement^="top"] .tooltip-arrow, .tooltip[x-placement^="top"] .tooltip-arrow::before {
   border-width: 10px 10px 0 10px;
   border-left-color: transparent;
   border-right-color: transparent;
@@ -629,12 +704,12 @@ input[name="csvsubset"] {
   margin-bottom: 0;
 }
 
-.tooltip[x-placement^="bottom"] .tooltip-arrow:before {
+.tooltip[x-placement^="bottom"] .tooltip-arrow::before {
   bottom: -20px;
   left: -21px;
 }
 
-.tooltip[x-placement^="bottom"] .tooltip-arrow, .tooltip[x-placement^="bottom"] .tooltip-arrow:before {
+.tooltip[x-placement^="bottom"] .tooltip-arrow, .tooltip[x-placement^="bottom"] .tooltip-arrow::before {
   border-width: 0 10px 10px 10px;
   border-left-color: transparent;
   border-right-color: transparent;
@@ -652,12 +727,12 @@ input[name="csvsubset"] {
   margin-right: 0;
 }
 
-.tooltip[x-placement^="right"] .tooltip-arrow:before {
+.tooltip[x-placement^="right"] .tooltip-arrow::before {
   top: -21px;
   right: -20px;
 }
 
-.tooltip[x-placement^="right"] .tooltip-arrow, .tooltip[x-placement^="right"] .tooltip-arrow:before {
+.tooltip[x-placement^="right"] .tooltip-arrow, .tooltip[x-placement^="right"] .tooltip-arrow::before {
   border-width: 10px 10px 10px 0;
   border-left-color: transparent;
   border-top-color: transparent;
@@ -675,12 +750,12 @@ input[name="csvsubset"] {
   margin-right: 0;
 }
 
-.tooltip[x-placement^="left"] .tooltip-arrow:before {
+.tooltip[x-placement^="left"] .tooltip-arrow::before {
   top: -21px;
   left: -20px;
 }
 
-.tooltip[x-placement^="left"] .tooltip-arrow, .tooltip[x-placement^="left"] .tooltip-arrow:before {
+.tooltip[x-placement^="left"] .tooltip-arrow, .tooltip[x-placement^="left"] .tooltip-arrow::before {
   border-width: 10px 0 10px 10px;
   border-top-color: transparent;
   border-right-color: transparent;
@@ -698,9 +773,22 @@ input[name="csvsubset"] {
 .skill-tag-tooltip-tag {
   width: 1.7rem;
   height: 1.7rem;
-  border-radius: 50%;
   display: inline-block;
+  position: relative;
+  border-radius: 50%;
+
   line-height: 1.7rem;
+}
+
+.skill-tag-tooltip-tag::before {
+  content: " ";
+  left: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
 }
 
 .skill-tag-tooltip-links {
